hphp/hack/test/typecheck/expression_trees/boolean_check.php.like_types.exp
File "boolean_check.php", line 27, characters 11-23:
Typing error (Typing[4110])
  File "boolean_check.php", line 27, characters 11-23:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 28, characters 11-23:
Typing error (Typing[4110])
  File "boolean_check.php", line 28, characters 11-23:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 30, characters 11-16:
Typing error (Typing[4110])
  File "boolean_check.php", line 30, characters 11-16:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 31, characters 11-16:
Typing error (Typing[4110])
  File "boolean_check.php", line 31, characters 11-16:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 33, characters 11-16:
Typing error (Typing[4110])
  File "boolean_check.php", line 33, characters 11-16:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 34, characters 16-28:
Typing error (Typing[4110])
  File "boolean_check.php", line 34, characters 16-28:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 36, characters 11-16:
Typing error (Typing[4110])
  File "boolean_check.php", line 36, characters 11-16:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 37, characters 16-28:
Typing error (Typing[4110])
  File "boolean_check.php", line 37, characters 16-28:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 40, characters 11-16:
Typing error (Typing[4110])
  File "boolean_check.php", line 40, characters 11-16:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 41, characters 16-21:
Typing error (Typing[4110])
  File "boolean_check.php", line 41, characters 16-21:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 45, characters 13-25:
Typing error (Typing[4110])
  File "boolean_check.php", line 45, characters 13-25:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 46, characters 13-18:
Typing error (Typing[4110])
  File "boolean_check.php", line 46, characters 13-18:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 48, characters 13-25:
Typing error (Typing[4110])
  File "boolean_check.php", line 48, characters 13-25:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 49, characters 17-17:
Typing error (Typing[4110])
  File "boolean_check.php", line 49, characters 17-17:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 49, characters 20-32:
Typing error (Typing[4110])
  File "boolean_check.php", line 49, characters 20-32:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 50, characters 14-26:
Typing error (Typing[4110])
  File "boolean_check.php", line 50, characters 14-26:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 50, characters 41-41:
Typing error (Typing[4110])
  File "boolean_check.php", line 50, characters 41-41:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 51, characters 17-17:
Typing error (Typing[4110])
  File "boolean_check.php", line 51, characters 17-17:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 51, characters 20-32:
Typing error (Typing[4110])
  File "boolean_check.php", line 51, characters 20-32:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 51, characters 47-47:
Typing error (Typing[4110])
  File "boolean_check.php", line 51, characters 47-47:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 53, characters 13-18:
Typing error (Typing[4110])
  File "boolean_check.php", line 53, characters 13-18:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 54, characters 17-17:
Typing error (Typing[4110])
  File "boolean_check.php", line 54, characters 17-17:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 54, characters 20-25:
Typing error (Typing[4110])
  File "boolean_check.php", line 54, characters 20-25:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 55, characters 14-19:
Typing error (Typing[4110])
  File "boolean_check.php", line 55, characters 14-19:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 55, characters 34-34:
Typing error (Typing[4110])
  File "boolean_check.php", line 55, characters 34-34:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 56, characters 17-17:
Typing error (Typing[4110])
  File "boolean_check.php", line 56, characters 17-17:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 56, characters 20-25:
Typing error (Typing[4110])
  File "boolean_check.php", line 56, characters 20-25:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 56, characters 40-40:
Typing error (Typing[4110])
  File "boolean_check.php", line 56, characters 40-40:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 59, characters 7-19:
Typing error (Typing[4110])
  File "boolean_check.php", line 59, characters 7-19:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 59, characters 25-25:
Typing error (Typing[4110])
  File "boolean_check.php", line 59, characters 25-25:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 59, characters 29-29:
Typing error (Typing[4110])
  File "boolean_check.php", line 59, characters 29-29:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 60, characters 7-12:
Typing error (Typing[4110])
  File "boolean_check.php", line 60, characters 7-12:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 48, characters 6-34:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 60, characters 18-18:
Typing error (Typing[4110])
  File "boolean_check.php", line 60, characters 18-18:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 60, characters 22-22:
Typing error (Typing[4110])
  File "boolean_check.php", line 60, characters 22-22:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 62, characters 7-18:
Typing error (Typing[4110])
  File "boolean_check.php", line 62, characters 7-18:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 34, characters 5-45:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 62, characters 22-22:
Typing error (Typing[4110])
  File "boolean_check.php", line 62, characters 22-22:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "boolean_check.php", line 62, characters 26-26:
Typing error (Typing[4110])
  File "boolean_check.php", line 62, characters 26-26:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
